# hack-nation

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  TASKS.md  main.py  pyproject.toml  render.yaml
docs/: frontend-api-contract.md  fund-intake-form.md  idea-evaluation-criteria.md
frontend/: index.html  package-lock.json  package.json  socials_graph.html  vite.config.js
frontend/fixtures/: applications.json  demo_application.json  thesis.json
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/static/: api.js  app.css
frontend/templates/: application.html  apply.html  dashboard.html  inbox.html  investor.html
pdf_parser/: .gitignore  __init__.py  deck_parser.py  extractor_agent.py  main.py  main_research.py  requirements.txt  research_agent.py  schema.py  tavily_client.py
prompts/: __init__.py
reasoning_layer/: .gitignore  __init__.py  adversarial_agent.py  decision_draft_agent.py  decision_finalizer.py  founder_scorer.py  idea_vs_market_scorer.py  llm_client.py  market_scorer.py  memory_client.py  pipeline.py  requirements.txt  schemas.py  thesis_config.json  thesis_config.py  thesis_fit_filter.py
scripts/: calibrate.py  seed_mock_data.py
tests/: conftest.py  test_demo.py  test_enrich.py  test_evaluation_api.py  test_evaluation_progress_flow.py  test_evaluation_stages.py  test_github_agent.py  test_github_evaluator.py  test_keepalive.py  test_memory.py  test_repository.py  test_reputation.py  test_screener.py  test_seed.py  test_socials.py  test_tavily_live.py
vc_brain/: config.py  llm.py
(+92 files in other folders)
