[project]
name = "vc-brain"
version = "0.1.0"
description = "The VC Brain: AI-first operating system for venture capital"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "networkx>=3.0",
    "python-dotenv>=1.0",
    "python-pptx>=0.6.23",
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["vc_brain*"]

[tool.pytest.ini_options]
markers = [
    "live: hits real external APIs and spends credits; skipped unless RUN_LIVE_TESTS=1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
